lots of v5 jda fixes